--- a/app/layouts/core/default.phtml
+++ b/app/layouts/core/default.phtml
@@ -33,6 +33,7 @@
 </head>
 <body class="hm" style="position: relative">
 <div id="loader" class="hidden"><span>Загрузка и обработка данных ... </span></div>
+<div id="messenger" style="opacity: 0">dsf</div>
 <div id="header">
     <div style="background: #F5FAFF; border-bottom: 3px solid #666;">
         <div class="container" style="position: relative; padding: 10px 0">
