--- a/app/modules/default/views/scripts/index/index.phtml
+++ b/app/modules/default/views/scripts/index/index.phtml
@@ -13,7 +13,7 @@ var t = new function(){
         alert('test');
     };
 
-    this['test'].call(this, []);
+    //this['test'].call(this, []);
 };
 
 
