--- a/app/layouts/core/default.phtml
+++ b/app/layouts/core/default.phtml
@@ -94,7 +94,7 @@
                         <li><a href="<?=$this->baseUrl('manager/tariffication/lines')?>">Тарифы</a></li>
                         <li><a href="<?=$this->baseUrl('manager/counseling-structure/lines')?>">Линии Консультации</a></li>
                         <li><a href="<?=$this->baseUrl('manager/counseling-structure/groups')?>">Группы/Специалисты</a></li>
-                        <li><a>Настройка доступа</a></li>
+                        <li><a href="<?=$this->baseUrl('manager/possibility/index')?>">Настройка доступа</a></li>
                     </ul>
                 </div>
             </div>
