--- a/app/modules/manager/views/scripts/possibility/managers.phtml
+++ b/app/modules/manager/views/scripts/possibility/managers.phtml
@@ -15,9 +15,9 @@ dojo.ready(function(){
 
 
 
-    dojo.subscribe('getTariffs', function(){
-        Sandbox.Layout.contentLoader('manager/tariffication/lines', {}).addCallback(function(results){
-            Sandbox.Layout.placeContent(dojo.byId('contentTariffs'), results);
+    dojo.subscribe('getManager', function(args){
+        Sandbox.Layout.contentLoader('manager/possibility/get-manager', args).addCallback(function(results){
+            Sandbox.Layout.placeContent(dojo.byId('contentManagers'), results);
             dojo.behavior.apply();
         });
     });
@@ -63,10 +63,10 @@ dojo.ready(function(){
         });
     });
 
-    dojo.subscribe('addTariff', function(args){
+    dojo.subscribe('addManager', function(args){
         // Форма добавления Пользователей в Группу
-        Sandbox.Layout.contentLoader('manager/tariffication/add-tariff', args).addCallback(function(results){
-            Sandbox.Layout.Dialog.set("title", "Добавление тарифа");
+        Sandbox.Layout.contentLoader('manager/possibility/add-manager', {}).addCallback(function(results){
+            Sandbox.Layout.Dialog.set("title", "Добавление менеджера");
             Sandbox.Layout.Dialog.set("content", results);
             Sandbox.Layout.Dialog.show();
             var formNode = dojo.byId("add-tariff");
@@ -102,18 +102,17 @@ dojo.ready(function(){
         '[data-action^="#!/getManager"]': {
             onclick: function(event){
                 event.preventDefault();
-                alert('manager');
-                //dispatcher(event.target.getAttribute("data-action"), ['line']);
+                dispatcher(event.target.getAttribute("data-action"), ['manager']);
             }
         },
         // Получить панель управления ЛК
-        '[data-action^="addTariff"]': {
+        '[data-action^="addManager"]': {
             onclick: function(event){
                 event.preventDefault();
-                dispatcher(event.target.getAttribute("data-action"), ['line']);
+                dispatcher(event.target.getAttribute("data-action"), []);
             }
         },
-        '[data-action^="#!/editTariffInfo"]': {
+        '[data-action^="#!/removeManager"]': {
             onclick: function(event){
                 event.preventDefault();
                 dispatcher(event.target.getAttribute("data-action"), ['tariff']);
@@ -137,31 +136,33 @@ dojo.ready(function(){
 JS;
 $this->headScript()->appendScript($jScript, $type = 'text/javascript')
 ?>
-<table class="table table-bordered">
-    <colgroup>
-        <col width="50">
-        <col>
-    </colgroup>
-    <thead>
-        <tr>
-            <th>#</th>
-            <th>Пользователь</th>
-        </tr>
-    </thead>
-    <tfoot>
-        <tr>
-            <td colspan="2">
-                <button type="button" name="add">Добавить</button>
-                <button type="button" name="remove">Удалить</button>
-            </td>
-        </tr>
-    </tfoot>
-    <tbody>
-        <?php foreach($data['managers'] as $manager): ?>
-        <tr>
-            <td><input type="checkbox"></td>
-            <td><a data-action="#!/getManager/<?=$manager->get('id')?>"><?=$manager->get('email')?></a></td>
-        </tr>
-        <?php endforeach; ?>
-    </tbody>
-</table>
+<div id="contentManagers">
+    <table class="table table-bordered">
+        <colgroup>
+            <col width="50">
+            <col>
+        </colgroup>
+        <thead>
+            <tr>
+                <th>#</th>
+                <th>Пользователь</th>
+            </tr>
+        </thead>
+        <tfoot>
+            <tr>
+                <td colspan="2">
+                    <button type="button" data-action="addManager" name="add">Добавить</button>
+                    <button type="button" data-action="removeManager" name="remove">Удалить</button>
+                </td>
+            </tr>
+        </tfoot>
+        <tbody>
+            <?php foreach($data['managers'] as $manager): ?>
+            <tr>
+                <td><input type="checkbox"></td>
+                <td><a data-action="#!/getManager/<?=$manager->get('id')?>"><?=$manager->get('email')?></a></td>
+            </tr>
+            <?php endforeach; ?>
+        </tbody>
+    </table>
+</div>
