--- a/app/modules/manager/views/scripts/counseling-structure/groups.phtml
+++ b/app/modules/manager/views/scripts/counseling-structure/groups.phtml
@@ -1,4 +1,3 @@
-
 <?php
 $jScript = <<<JS
 require(["dojo/behavior", "dojo/hash", "app/model/Line", "app/model/Level", "core/Sandbox", "core/sandbox/helpers/Validate", "core/sandbox/helpers/Form"]);
@@ -152,6 +151,8 @@ $this->headScript()->appendScript($jScript, $type = 'text/javascript');
 $data = $this->data;
 $companyColl = new HM_Model_Billing_Company_Collection();
 $groupColl = new HM_Model_Counseling_Structure_Group_Collection();
+$levelColl = new HM_Model_Counseling_Structure_Level_Collection();
+$lineColl = new HM_Model_Counseling_Structure_Line_Collection();
 ?>
 
 <div id="contentGroups">
@@ -160,10 +161,11 @@ $groupColl = new HM_Model_Counseling_Structure_Group_Collection();
             <col width="350"/>
             <col width="30"/>
             <col/>
+            <col width="300">
         </colgroup>
         <thead>
         <tr>
-            <th colspan="3">Название компании</th>
+            <th colspan="4">Название компании</th>
         </tr>
         </thead>
         <tbody>
@@ -175,6 +177,7 @@ $groupColl = new HM_Model_Counseling_Structure_Group_Collection();
             <td rowspan="<?=count($entry['groups']) + 1?>"><?=$companyData->get('name')?></td>
             <th>#ID</th>
             <th>Группа</th>
+            <th>ЛК</th>
         </tr>
             <?php
             foreach($entry['groups'] as $group):
@@ -183,6 +186,14 @@ $groupColl = new HM_Model_Counseling_Structure_Group_Collection();
             <tr>
                 <td><?=$groupData->get('id')?></td>
                 <td><a class="engineAjax" data-action="#!/getGroupBoard/<?=$groupData->get('id')?>" href="#!/getGroupBoard/<?=$groupData->get('id')?>" title="<?=$groupData->get('name')?>"><?=$groupData->get('name')?></a></td>
+                <td>
+                    <?php
+                    $line = $lineColl->load(
+                        $levelColl->load($groupData->get('level'))->getData('line')
+                    );
+                    ?>
+                    <?=$line->getData('name')?>
+                </td>
             </tr>
                 <?php endforeach; ?>
             <?php endforeach; ?>
