--- a/app/modules/manager/views/scripts/counseling-structure/groups.phtml
+++ b/app/modules/manager/views/scripts/counseling-structure/groups.phtml
@@ -158,9 +158,9 @@ $lineColl = new HM_Model_Counseling_Structure_Line_Collection();
 <div id="contentGroups">
     <table class="table table-bordered">
         <colgroup>
-            <col width="350"/>
-            <col width="30"/>
-            <col/>
+            <col width="300">
+            <col width="30">
+            <col>
             <col width="300">
         </colgroup>
         <thead>
