--- a/app/layouts/core/default.phtml
+++ b/app/layouts/core/default.phtml
@@ -32,7 +32,7 @@
     <?php print $this->headScript();?>
 </head>
 <body class="hm" style="position: relative">
-<div id="loader" class="hidden"><span>Загрузка и обработка данных ... </span></div>
+<div id="loader" class="hidden"><span>... обработка данных ... </span></div>
 <div id="messenger" style="opacity: 0">dsf</div>
 <div id="header">
     <div style="background: #F5FAFF; border-bottom: 3px solid #666;">
