--- a/app/modules/default/views/scripts/index/index.phtml
+++ b/app/modules/default/views/scripts/index/index.phtml
@@ -8,9 +8,10 @@ dojo.ready(function(){
 var template = Handlebars.compile(dojo.byId("entry-template").innerHTML);
 console.log(template({title: "Alan", body: "Johnson", people: ['sdfdsf', 'dfsdfsdf']}));
 var processing = core.layout.Processing({node: dojo.byId('messenger')});
-console.log(processing);
-processing.show({type: 2});
+console.log(processing.types._values[0]);
+processing.show(9);
 
+dojo.keys
 });
 JS;
 $this->headScript()->appendScript($jScript, $type = 'text/javascript')
