--- a/app/modules/manager/views/scripts/possibility/add-manager.ajax.phtml
+++ b/app/modules/manager/views/scripts/possibility/add-manager.ajax.phtml
@@ -12,8 +12,9 @@
     <tbody>
         <tr>
             <td>
+                <input type="checkbox" value="fff" name="check">
                 <label for="add-manager-account">Логин или email</label>
-                <input type="text" id="add-manager-account" name="account">
+                <input type="text" id="add-manager-account" name="account" isRequired="true">
             </td>
         </tr>
         <tr>
@@ -24,7 +25,7 @@
         <tr>
             <td>
                 <label for="add-manager-company">Компания</label>
-                <select name="company" id="add-manager-company"></select>
+                <select name="company" id="add-manager-company"><option value=1>Test</option></select>
             </td>
         </tr>
     </tbody>
